Cleaned up the sidebar nav to include: - Open sans font which is more legible - Fixed line heights - Made smaller to match body copy - Main bar is bold
Adjusted bread crumbs:
- Removed max-width as it was confusing people
- Lowered line-height which affects multiple-line breadcrumbs
- Smaller text to be less prominent and fit more, since max-width was removed

--- a/less/uw.breadcrumbs.less
+++ b/less/uw.breadcrumbs.less
@@ -13,14 +13,19 @@
 		list-style: none;
 		display: inline-block;
 		position: relative;
-		&:first-child a {
-			background: url(assets/svg/uw-sprite.svg) no-repeat -249px 3px;
-			text-indent: -99999px;
-			width: 30px;
-			padding: 5px 0 5px 0;
-			margin-right: 25px;
-			&:before {
-				right: -18px;
+		&:first-child {
+			a {
+				background: url(assets/svg/uw-sprite.svg) no-repeat -249px 5px;
+				text-indent: -99999px;
+				width: 30px;
+				padding: 5px 0 5px 0;
+				margin-right: 25px;
+				&:before {
+					right: -18px;
+				}
+			}
+			&:after {
+				top: 17px;
 			}
 		}
 		&.current {
@@ -46,7 +51,7 @@
 			height: 10px;
 			width: 10px;
 			right: 5px;
-			top: 13px;
+			top: 7px;
 			.opacity(.8);
 			background: url('assets/svg/caret.svg') no-repeat;
 			.background-size(7px 5px);
@@ -64,34 +69,35 @@
 		font-family: @font-family-headline;
 		color: #535353;
 		font-weight: 500;
-		font-size: 16px;
-		padding: 5px 25px 5px 0;
+		font-size: 15px;
+		padding: 0 25px 0 0;
 		display: block;
 		white-space: nowrap;
 		overflow: hidden;
-		max-width: 250px;
 		//Caret
 	}
 }
-
 @media only screen and (max-width : 767px) {
 	.uw-breadcrumbs {
 		float: none;
 		padding: 0;
-		margin: 15px 0 0 -5px;
+		margin: 0 0 0 -5px;
 		li {
 			float: left;
 			display: initial;
 			a, span {
 				padding: 0 25px 0 0;
 			}
-			&:after {
-				top: 8px;
+			&:first-child {
+				a {
+					background-position: -250px -3px;
+					padding: 0;
+				}
+				&:after {
+					top: 8px;
+				}
 			}
-			&:first-child a {
-				background-position: -250px -3px;
-				padding: 0;
-			}
+			 
 		}
 	}
 }
